--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "api-response-json": "^1.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.4.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "twin-bcrypt": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
