--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "twin-bcrypt": "^2.1.1",
