--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "firebase": "^8.2.6",
     "firebase-admin": "^9.4.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
